Give canvas element a grey-double-border

--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 
 	<body class="m-0 bg-white">
 		<h1 class="text-center p-6">Brick Breaker</h1>
-		<canvas class="block m-auto p-0"></canvas>
+		<canvas class="block m-auto p-0 border-double border-4 border-gray-600"></canvas>
 	</body>
 
 	<!--Load javascript-->
