--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
 	</head>
 
 	<body class="m-0 bg-white">
-		<h1 class="text-center p-6">Brick Breaker</h1>
+		<h1 class="text-center p-6 select-none">Brick Breaker</h1>
 		<canvas class="block m-auto p-0 border-double border-4 border-gray-600"></canvas>
 	</body>
 
