Added Health Display

--- a/index.html
+++ b/index.html
@@ -7,8 +7,10 @@
 	</head>
 
 	<body class="m-0 bg-white">
-		<h1 class="text-center p-6 select-none">Brick Breaker</h1>
-		<canvas class="block m-auto p-0 border-4 border-gray-600"></canvas>
+		<h1 class="text-center p-6 select-none">
+			Brick Breaker
+		</h1>
+		<canvas class="block m-auto p-0 border-4 border-gray-600" width = "408" height="460"></canvas>
 	</body>
 
 	<!--Load javascript-->
