--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
 
 	<body class="m-0 bg-white">
 
+		<!--Game Menu-->
 		<div class="fixed inset-0 flex items-center justify-center select-none" id = "menuElement">
 			<div class = "bg-white max-w-md w-1/4 p-6 text-center mb-40">
 
@@ -24,15 +25,16 @@
 					<button class = "bg-blue-500 text-white w-3/4 py-2 mt-2 rounded-full text-sm" id = "levelSelectionButton">
 						Level Selection
 					</button>
-					<button class = "bg-blue-500 text-white w-3/4 py-2 mt-2 rounded-full text-sm" id = "infoButton">
-						Info
+					<button class = "bg-blue-500 text-white w-3/4 py-2 mt-2 rounded-full text-sm" id = "creditsButton">
+						Credits
 					</button>
 				</div>
 			</div>
 		</div>
 
+		<!--Level Selection Screen-->
 		<div class="fixed flex inset-0 items-center justify-center select-none mb-40" id="levelSelectionElement">
-			<div class="grid grid-cols-5 gap-2 w-1/4 bg-white p-3">
+			<div class="grid grid-cols-5 gap-2 w-3/8 bg-white p-3">
 				<div><button
 					class = "bg-blue-500 text-white w-full py-2 rounded-md text-sm" 
 					id = "l1Button">
@@ -111,6 +113,12 @@
 			</div>
 		</div>
 
+		<!--Win/Lose message element-->
+		<div class="fixed inset-0 flex items-center justify-center select-none" id="gameMessageElement">
+			<p class="p-6 font-bold text-4xl rounded-md mb-40">Game Over!</p>
+		</div>
+
+		<!--Canvas element-->
 		<canvas class="block m-auto mt-4 p-0 border-2 border-gray-600" width="408" height="460" id = "canvas">
 			Your browser does not support the canvas element :/
 		</canvas>
