--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
 		</div>
 
 		<!--Level Selection Screen-->
-		<div class="flex flex inset-0 items-center justify-center select-none mb-40" id="levelSelectionElement">
+		<div class="fixed flex inset-0 items-center justify-center select-none mb-40" id="levelSelectionElement">
 			<div class="grid grid-cols-5 gap-2 w-3/8 bg-white p-3">
 				<div><button
 					class = "bg-blue-500 text-white w-full py-2 rounded-md text-sm" 
@@ -113,12 +113,12 @@
 			</div>
 		</div>
 
-		
-
 		<!--Win/Lose message element-->
-		<div class="flex inset-0 flex items-center justify-center select-none" id="gameMessageElement">
+		<div class="fixed inset-0 flex items-center justify-center select-none" id="gameMessageElement">
 			<p class="p-6 font-bold text-4xl rounded-md mb-40">Game Over!</p>
 		</div>
+
+		<div class="fixed flex inset-0 justify-center bg-white" id="startupWhiteOverlayElement"></div>
 
 		<!--Canvas element-->
 		<canvas class="block m-auto mt-4 p-0 border-2 border-gray-600" width="408" height="460" id = "canvas">
