--- a/index.html
+++ b/index.html
@@ -1,16 +1,42 @@
-
 <!DOCTYPE html>
 <html>
 	<head>
 		<!--Load Tailwind's CSS classes-->
 		<link href="https://unpkg.com/tailwindcss@^1.0/dist/tailwind.min.css" rel="stylesheet">
+		<style>
+			.container{
+				position: relative;
+			}
+			.center{
+				position: absolute;
+				top: 50%;
+				width: 100%;
+			}
+			canvas {
+			padding: 0;
+			margin: auto;
+			display: block;
+			width: 408px;
+			height: 460px;
+			position: absolute;
+			top: 0;
+			bottom: 0;
+			left: 0;
+			right: 0;
+		}
+		</style>
 	</head>
 
 	<body class="m-0 bg-white">
 
+		<!--Canvas element-->
+		<canvas id = "canvas">
+			Your browser does not support the canvas element :/
+		</canvas>
+
 		<!--Game Menu-->
-		<div class="fixed inset-0 flex items-center justify-center select-none" id = "menuElement">
-			<div class = "bg-white max-w-md w-1/4 p-6 text-center mb-40">
+		<div class="fixed flex inset-0 items-center justify-center select-none" id = "menuElement">
+			<div class = "bg-white max-w-md w-1/4 p-6 text-center">
 
 				<h1 class = "text-4xl font-bold leading-none" id = "titleElement">
 					Brick Breaker
@@ -32,8 +58,8 @@
 			</div>
 		</div>
 
-		<!--Level Selection Screen-->
-		<div class="fixed flex inset-0 items-center justify-center select-none mb-40" id="levelSelectionElement">
+		<!--Level Selection Menu-->
+		<div class="fixed flex inset-0 items-center justify-center select-none" id="levelSelectionElement">
 			<div class="grid grid-cols-5 gap-2 w-3/8 bg-white p-3">
 				<div><button
 					class = "bg-blue-500 text-white w-full py-2 rounded-md text-sm" 
@@ -119,11 +145,6 @@
 		</div>
 
 		<div class="fixed flex inset-0 justify-center bg-white" id="startupWhiteOverlayElement"></div>
-
-		<!--Canvas element-->
-		<canvas class="block m-auto mt-4 p-0 border-2 border-gray-600" width="408" height="460" id = "canvas">
-			Your browser does not support the canvas element :/
-		</canvas>
 
 	</body>
 
