--- a/index.html
+++ b/index.html
@@ -36,14 +36,10 @@
 
 		<!--Game Menu-->
 		<div class="fixed flex inset-0 items-center justify-center select-none" id = "menuElement">
-			<div class = "bg-white max-w-md w-1/4 p-6 text-center">
-
-				<h1 class = "text-4xl font-bold leading-none" id = "titleElement">
+			<div class = "bg-white max-w-md w-1/6 p-6 text-center">
+				<h1 class = "text-4xl font-bold leading-none pb-5" id = "titleElement">
 					Brick Breaker
 				</h1>
-				<p class = "text-sm text-gray-700 mb-4 mt-1" id = "subtitleElement">
-					By Samuel Morris
-				</p>
 				<div>
 					<button class = "bg-blue-500 text-white w-3/4 py-2 rounded-full text-sm" id = "startButton">
 						Start
@@ -142,10 +138,25 @@
 		<!--Win/Lose message element-->
 		<div class="fixed inset-0 flex items-center justify-center select-none" id="gameMessageElement">
 			<div class="bg-white rounded-lg w-3/8 mb-30 p-2">
-				<p class="font-bold text-4xl">Game Over!</p>
+				<p class="font-bold text-4xl" id="gameMessageElementText">Game Over!</p>
 				<div class="text-center p-2">
 					<button class = "bg-blue-500 text-white w-auto py-2 px-4 rounded-full text-sm" id = "levelDoneActionButton">Next Level</button>
 					<button class = "bg-blue-500 text-white w-auto py-2 px-4 rounded-full text-sm" id = "backButton">Main menu</button>
+				</div>
+			</div>
+		</div>
+
+		<!--Credits Display-->
+		<div class="fixed inset-0 flex items-center justify-center text-center select-none hidden" id="creditsDisplay">
+			<div class="bg-white rounded-lg p-3">
+				<p class="font-bold text-2xl pb-5">Game Credits</p>
+				<p>Game creator: Samuel Morris.</p>
+				<p>Music provided by: Patrick De Arteaga.</p>
+				<a href="https://patrickdearteaga.com/royalty-free-music/" class="text-blue-400" target="_blank">
+					See also: Patrick's Website.
+				</a>
+				<div class="w-full p-3">
+					<button class = "bg-blue-500 text-white w-auto py-2 px-4 rounded-full text-sm" id = "creditsBackButton">Main Menu</button>
 				</div>
 			</div>
 		</div>
