Create and organize src folder

--- a/index.html
+++ b/index.html
@@ -167,5 +167,5 @@
 	</body>
 
 	<!--Load javascript-->
-	<script type="module" src="main.js"></script>
+	<script type="module" src="src/main.js"></script>
 </html>
