Add instructions to webpage.

--- a/index.html
+++ b/index.html
@@ -34,6 +34,9 @@
 			Your browser does not support the canvas element :/
 		</canvas>
 
+		<h1>Instructions:</h1>
+		<p>Click the game to begin. Use the arrow keys of "a" and "d" keys to move the platform back and forth, and press space to launch the ball!</p>
+
 		<!--Game Menu-->
 		<div class="fixed flex inset-0 items-center justify-center select-none" id = "menuElement">
 			<div class = "bg-white max-w-md w-1/6 p-6 text-center">
