--- a/index.html
+++ b/index.html
@@ -34,8 +34,15 @@
 			Your browser does not support the canvas element :/
 		</canvas>
 
-		<h1>Instructions:</h1>
-		<p>Click the game to begin. Use the arrow keys of "a" and "d" keys to move the platform back and forth, and press space to launch the ball!</p>
+		<div class="width-full text-center mt-5">
+			<p><b>
+				Instructions:
+			</b></p>
+
+			<p>Click the screen to load the game. Then press start, or choose a level from the level-selection screen to begin. </p>
+			<p>You can use the arrow keys, or the "a" and "d" keys, to move the platform back and forth, and press space to </p>
+			<p>launch the ball. Destroy all the bricks before the time is up, or you lose!</p>
+		</div>
 
 		<!--Game Menu-->
 		<div class="fixed flex inset-0 items-center justify-center select-none" id = "menuElement">
